# simplechatwebrtc

./: CMakeLists.txt  main.cpp  offerer.cpp
include/: common.hpp
src/: common.cpp
